--- a/careers-lists.html
+++ b/careers-lists.html
@@ -41,6 +41,9 @@
                     <a href="./index.html#projects" :class="[activeLink == 'projects' ? 'active' : '']"
                         @click="activeLink = 'projects'"
                         class="list-group-item-action w-100 text-uppercase">{{tr.projects}}</a>
+                    <a href="./index.html#projects" :class="[activeLink == 'projects' ? 'active' : '']"
+                        @click="activeLink = 'projects'"
+                        class="list-group-item-action w-100 text-uppercase">{{tr.projects}}</a>
                     <a href="./index.html#gallery" :class="[activeLink == 'gallery' ? 'active' : '']"
                         @click="activeLink = 'gallery'"
                         class="list-group-item-action w-100 text-uppercase">{{tr.gallery}}</a>
@@ -59,6 +62,9 @@
                             <a href="javascript:void(0)" @click="setLanguage('ar')"
                                 class="list-group-item-action w-100 ar-link">عربي</a>
                         </div>
+                        <a href="./careers-lists.html"
+                            class="list-group-item-action w-100 bg-blue text-uppercase">{{tr.careers}}
+                        </a>
                         <a href="./registration.html"
                             class="list-group-item-action w-100 bg-orange text-uppercase">{{tr.registration}}</a>
                         <a href="./contacts.html"
@@ -94,15 +100,15 @@
                     <div class="d-flex">
                         <ul class="navbar-nav">
                             <li class="nav-item border-right">
-                                <a class="nav-link py-0 px-4" href="./index.html#news"><i class="fas mr-2"
+                                <a class="nav-link py-0 px-4" href="./index.html"><i class="fas mr-2"
                                         :class="[language=='ar' ? 'fa-angle-right' : 'fa-angle-left']"></i></a>
                             </li>
                         </ul>
                         <div class="btn-group w-100">
-                            <div class="bg-white w-100 p-3 text-uppercase custom-toggle" data-toggle="dropdown"
-                                aria-haspopup="true" aria-expanded="false">{{translate(newsPage.activeList)}}
+                            <div class="bg-white w-100 p-3 text-uppercase" data-toggle="dropdown" aria-haspopup="true"
+                                aria-expanded="false">{{translate(careersPage.activeList)}}
                             </div>
-                            <div class="dropdown-menu p-0 custom-dropdown">
+                            <!-- <div class="dropdown-menu p-0 custom-dropdown">
                                 <li class="nav-item" @click="newsPage.activeList = 'news'"
                                     :class="[newsPage.activeList == 'news' ? 'active' : '']">
                                     <a href="./news-events-lists.html?activeList=news"
@@ -114,7 +120,7 @@
                                         class="nav-link py-3 px-4 text-uppercase"
                                         :class="[newsPage.activeList == 'events' ? 'text-red' : 'text-dark']">{{tr.events}}</a>
                                 </li>
-                            </div>
+                            </div> -->
                         </div>
                     </div>
                 </div>
@@ -124,7 +130,7 @@
                     <div class="row h-100">
                         <div class="col-md-4 h-md-100 bg-white h-auto side-list p-4 p-md-5"
                             :data-aos="[language=='ar' ? 'fade-left' : 'fade-right']">
-                            <div class="list-title text-uppercase mb-2">{{tr.news}}</div>
+                            <div class="list-title text-uppercase mb-2">{{tr.careers}}</div>
                             <h4 class="list-slogan text-muted">{{tr.newsSlogan}}</h4>
                         </div>
                         <div class="col-md-8 content-list bg-white h-100 p-0"
