--- a/projects-lists.html
+++ b/projects-lists.html
@@ -59,6 +59,9 @@
                             <a href="javascript:void(0)" @click="setLanguage('ar')"
                                 class="list-group-item-action w-100 ar-link">عربي</a>
                         </div>
+                        <a href="./careers-lists.html"
+                            class="list-group-item-action w-100 bg-blue text-uppercase">{{tr.careers}}
+                        </a>
                         <a href="./registration.html"
                             class="list-group-item-action w-100 bg-orange text-uppercase">{{tr.registration}}</a>
                         <a href="./contacts.html"
@@ -106,25 +109,38 @@
                     <div class="d-flex">
                         <ul class="navbar-nav">
                             <li class="nav-item border-right">
-                                <a class="nav-link py-0 px-4" href="./index.html#news"><i class="fas mr-2"
+                                <a class="nav-link py-0 px-4" href="./index.html#projects"><i class="fas mr-2"
                                         :class="[language=='ar' ? 'fa-angle-right' : 'fa-angle-left']"></i></a>
                             </li>
                         </ul>
                         <div class="btn-group w-100">
                             <div class="bg-white w-100 p-3 text-uppercase custom-toggle" data-toggle="dropdown"
-                                aria-haspopup="true" aria-expanded="false">{{translate(newsPage.activeList)}}
+                                aria-haspopup="true" aria-expanded="false">
+                                {{translate(projectsPage.activeList).slice(0, 15) + "..."}}
                             </div>
                             <div class="dropdown-menu p-0 custom-dropdown">
-                                <li class="nav-item" @click="newsPage.activeList = 'news'"
-                                    :class="[newsPage.activeList == 'news' ? 'active' : '']">
-                                    <a href="./news-events-lists.html?activeList=news"
-                                        class="nav-link py-3 px-4 text-uppercase"
-                                        :class="[newsPage.activeList == 'news' ? 'text-red' : 'text-dark']">{{tr.news}}</a>
+
+                                <li class="nav-item" @click="projectsPage.activeList = 'youthEmpowerment'"
+                                    :class="[projectsPage.activeList == 'youthEmpowerment' ? 'active' : '']">
+                                    <a class="nav-link py-3 px-4 text-uppercase"
+                                        :class="[projectsPage.activeList == 'youthEmpowerment' ? 'text-red' : 'text-dark']">{{tr.key_0}}</a>
                                 </li>
-                                <li class="nav-item" :class="[newsPage.activeList == 'events' ? 'active' : '']">
-                                    <a href="./news-events-lists.html?activeList=events"
-                                        class="nav-link py-3 px-4 text-uppercase"
-                                        :class="[newsPage.activeList == 'events' ? 'text-red' : 'text-dark']">{{tr.events}}</a>
+
+                                <li class="nav-item" @click="projectsPage.activeList = 'youthParticipation'"
+                                    :class="[projectsPage.activeList == 'youthParticipation' ? 'active' : '']">
+                                    <a class="nav-link py-3 px-4 text-uppercase"
+                                        :class="[projectsPage.activeList == 'youthParticipation' ? 'text-red' : 'text-dark']">{{tr.key_1}}</a>
+                                </li>
+                                <li class="nav-item" @click="projectsPage.activeList = 'capacity'"
+                                    :class="[projectsPage.activeList == 'capacity' ? 'active' : '']">
+                                    <a class="nav-link py-3 px-4 text-uppercase"
+                                        :class="[projectsPage.activeList == 'capacity' ? 'text-red' : 'text-dark']">{{tr.key_2}}</a>
+                                </li>
+
+                                <li class="nav-item" @click="projectsPage.activeList = 'socialDevelopment'"
+                                    :class="[projectsPage.activeList == 'socialDevelopment' ? 'active' : '']">
+                                    <a class="nav-link py-3 px-4 text-uppercase"
+                                        :class="[projectsPage.activeList == 'socialDevelopment' ? 'text-red' : 'text-dark']">{{tr.key_3}}</a>
                                 </li>
                             </div>
                         </div>
@@ -136,13 +152,14 @@
                     <div class="row h-100">
                         <div class="col-md-4 h-md-100 bg-white h-auto side-list p-4 p-md-5"
                             :data-aos="[language=='ar' ? 'fade-left' : 'fade-right']">
-                            <div class="list-title text-uppercase mb-2">{{tr.news}}</div>
+                            <div class="list-title text-uppercase mb-2">{{tr.key_0}}</div>
                             <h4 class="list-slogan text-muted">{{tr.newsSlogan}}</h4>
                         </div>
                         <div class="col-md-8 content-list bg-white h-100 p-0"
                             :data-aos="[language=='ar' ? 'fade-right' : 'fade-left']">
                             <div class="container custom-container">
-                                <div class="row news-item" v-for="project in projectsPage.projectsList">
+                                <div class="row news-item" v-for="project in projectsPage.projectsList"
+                                    v-if="project.category==0">
                                     <div class="col-md-4 img-news col-12 h-100">
                                         <img class="w-100" :src="serverPath+project.img" alt="">
                                     </div>
@@ -174,14 +191,15 @@
                     <div class="row h-100">
                         <div class="col-md-4 h-md-100 bg-white h-auto side-list p-4 p-md-5"
                             :data-aos="[language=='ar' ? 'fade-left' : 'fade-right']">
-                            <div class="list-title text-uppercase mb-2">{{tr.events}}</div>
+                            <div class="list-title text-uppercase mb-2">{{tr.key_1}}</div>
                             <h4 class="list-slogan text-muted">{{tr.newsSlogan}}</h4>
                         </div>
                         <div class="col-md-8 content-list h-100 bg-white p-0"
                             :data-aos="[language=='ar' ? 'fade-right' : 'fade-left']">
                             <div class="container custom-container">
 
-                                <div class="row news-item" v-for="project in projectsPage.projectsList">
+                                <div class="row news-item" v-for="project in projectsPage.projectsList"
+                                    v-if="project.category==1">
                                     <div class="col-md-4 img-news col-12 h-100">
                                         <img class="w-100" :src="serverPath+project.img" alt="">
                                     </div>
@@ -212,14 +230,15 @@
                     <div class="row h-100">
                         <div class="col-md-4 h-md-100 bg-white h-auto side-list p-4 p-md-5"
                             :data-aos="[language=='ar' ? 'fade-left' : 'fade-right']">
-                            <div class="list-title text-uppercase mb-2">{{tr.events}}</div>
+                            <div class="list-title text-uppercase mb-2">{{tr.key_2}}</div>
                             <h4 class="list-slogan text-muted">{{tr.newsSlogan}}</h4>
                         </div>
                         <div class="col-md-8 content-list h-100 bg-white p-0"
                             :data-aos="[language=='ar' ? 'fade-right' : 'fade-left']">
                             <div class="container custom-container">
 
-                                <div class="row news-item" v-for="project in projectsPage.projectsList">
+                                <div class="row news-item" v-for="project in projectsPage.projectsList"
+                                    v-if="project.category==2">
                                     <div class="col-md-4 img-news col-12 h-100">
                                         <img class="w-100" :src="serverPath+project.img" alt="">
                                     </div>
@@ -251,14 +270,15 @@
                     <div class="row h-100">
                         <div class="col-md-4 h-md-100 bg-white h-auto side-list p-4 p-md-5"
                             :data-aos="[language=='ar' ? 'fade-left' : 'fade-right']">
-                            <div class="list-title text-uppercase mb-2">{{tr.events}}</div>
+                            <div class="list-title text-uppercase mb-2">{{tr.key_3}}</div>
                             <h4 class="list-slogan text-muted">{{tr.newsSlogan}}</h4>
                         </div>
                         <div class="col-md-8 content-list h-100 bg-white p-0"
                             :data-aos="[language=='ar' ? 'fade-right' : 'fade-left']">
                             <div class="container custom-container">
 
-                                <div class="row news-item" v-for="project in projectsPage.projectsList">
+                                <div class="row news-item" v-for="project in projectsPage.projectsList"
+                                    v-if="project.category==3">
                                     <div class="col-md-4 img-news col-12 h-100">
                                         <img class="w-100" :src="serverPath+project.img" alt="">
                                     </div>
